@startuml

' ============= LAYOUT SETTINGS =============
left to right direction
hide circle
skinparam classAttributeIconSize 0
skinparam linetype ortho

' ============= THICKER BORDERS, LINES, AND BOLDER TEXT =============
skinparam class {
    BackgroundColor white
    BorderColor black
    FontColor black
    FontStyle bold
    FontSize 12
    BorderThickness 3
    RoundCorner 8
}

skinparam arrow {
    Thickness 3
    Color black
}

skinparam note {
    FontStyle bold
    FontSize 11
    BorderThickness 2
}

skinparam padding 10
skinparam margin 8

' ============= CORE USER TABLE =============
class Users {
    -user_id : int (PK)
    -first_name : string
    -middle_name : string
    -last_name : string
    -email : string (UK)
    -username : string (UK)
    -password : string
    -profile_picture : string
    -contact_number : string
    -address : string
    -birthdate : date
    -gender : enum [Male,Female,Other]
    -date_created : timestamp
    --
    +login()
    +updateProfile()
}

' ============= USER ROLES =============
class Customers {
    -customer_id : int (PK)
    -user_id : int (FK)
    -date_joined : timestamp
    --
    +manageCart(action,item)
    +manageOrder(action,order_id)
    +addReview(product_id,rating,comment)
}

class Sellers {
    -seller_id : int (PK)
    -user_id : int (FK) (UK)
    -business_name : string
    -identity_path : string
    -id_document_path : string
    -is_verified : enum [pending,rejected,verified]
    -verification_date : timestamp
    -date_applied : timestamp
    -rating : decimal
    --
    +manageProducts(action,data)
    +manageOrders(action,order_id)
    +getStoreStats()
}

class Administrators {
    -admin_id : int (PK)
    -user_id : int (FK) (UK)
    -last_log : timestamp
    --
    +manageUsers(action,user_id)
    +manageSellers(action,seller_id)
    +viewSystemLogs()
}

' ============= PRODUCT MANAGEMENT =============
class Products {
    -product_id : int (PK)
    -seller_id : int (FK)
    -name : string
    -description : text
    -price : decimal
    -category : string
    -stock_quantity : int
    -media_path : string
    -is_active : boolean [0,1]
    -date_added : timestamp
    --
    +updateDetails(data)
    +adjustStock(quantity)
    +getMedia()
}

class ProductReviews {
    -review_id : int (PK)
    -product_id : int (FK)
    -user_id : int (FK)
    -order_id : int (FK) (UK)
    -rating : int [1-5]
    -comment : text
    -date_posted : timestamp
}

' ============= SHOPPING FLOW =============
class Carts {
    -cart_id : int (PK)
    -customer_id : int (FK)
    -seller_id : int (FK)
    -product_id : int (FK)
    -quantity : int
    -price : decimal
    -added_at : timestamp
    --
    +updateQuantity(quantity)
    +getSubtotal()
    note: (UK) [customer_id, product_id]
}

class Orders {
    -order_id : int (PK)
    -customer_id : int (FK)
    -seller_id : int (FK)
    -product_id : int (FK)
    -quantity : int
    -price : decimal
    -subtotal : decimal
    -shipping_address : string
    -payment_method : enum [COD,Online]
    -status : enum [pending,delivered,cancelled]
    -order_date : timestamp
    -delivered_at : timestamp
    -cancelled_at : timestamp
    -cancelled_by : enum [customer,seller]
    --
    +updateStatus(newStatus)
    +calculateTotal()
}

' ============= INHERITANCE (IS-A) =============
Users <|-- Customers : "1:1"
Users <|-- Sellers : "1:1"
Users <|-- Administrators : "1:1"

' ============= RELATIONSHIPS (HAS-A) =============
Customers "1" --> "0..*" Carts : "1 : M"
Customers "1" --> "0..*" Orders : "1 : M"
Customers "1" --> "0..*" ProductReviews : "1 : M"

Sellers "1" --> "0..*" Products : "1 : M"
Sellers "1" --> "0..*" Orders : "1 : M"

Products "1" --> "0..*" Carts : "1 : M"
Products "1" --> "0..*" Orders : "1 : M"
Products "1" --> "0..*" ProductReviews : "1 : M"

Orders "1" --> "1..1" ProductReviews : "1 : 1"

@enduml